--- a/CSS/index.css
+++ b/CSS/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    min-width: 1200px;
+    /* min-width: 1200px; */
     background-color: #EDF2F3;
 }
 
@@ -51,80 +51,6 @@ hr {
     width: 300px;
     border: 2px solid hwb(16 7% 83% / 0.501);
     border-radius: 50px;
-}
-
-.head {
-    width: 100%;
-    height: 80px;
-    /* background-color: rgb(239, 238, 234, 0.2); */
-    /* background-color: rgba(52, 65, 4, 0.28); */
-    /* background-color: rgba(185, 135, 88, 0.4); */
-    /* background-color: rgb(97, 95, 88, 0.4); */
-    background-color: #636E7FD0;
-    transition: background-color 0.5s;
-}
-
-.head:hover {
-    background-color: #636E7F;
-}
-
-.head-top {
-    width: 1200px;
-    height: 80px;
-    padding: 0 10px;
-    box-sizing: border-box;
-    margin: auto;
-}
-
-.head-logo {
-    width: 146px;
-    height: 80px;
-    float: left;
-}
-
-.head-list {
-    min-width: 842px;
-    float: right;
-}
-
-.head-list nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80px;
-}
-
-.head-list nav ul {
-    display: flex;
-    /* ul 內的 li 項目水平排列 */
-}
-
-.head-list nav li {
-    margin: 15px;
-    /* 設定項目之間的間距 */
-    color: #F6EED1;
-    /* 文字顏色 */
-    /* text-decoration: none; ，a標籤才需要*/
-    /* 移除底線 */
-    font-size: 18px;
-    font-family: 'Fredoka One', sans-serif;
-    font-weight: 800;
-    /* text-shadow: 0px 0px 10px #000000; */
-}
-
-.head-list nav li:hover {
-    /* font-size: 22px; */
-    /* font-weight: bolder; */
-    color: #ffffff;
-    text-shadow: 0px 0px 20px #ffffff;
-    /* box-shadow: 0px 10px 10px -10px #ffffff; */
-    /* 滑鼠懸停效果 */
-    cursor: pointer;
-    /* 滑鼠指到會變成手指 */
-}
-
-.clear {
-    clear: both;
 }
 
 .top-bg img {
@@ -226,29 +152,44 @@ h1 {
 
 
 .back-to-top {
-    position: fixed;               /* 固定在螢幕位置 */
-    bottom: 50px;                  /* 距離頁面底部 */
-    right: 20px;                   /* 距離頁面右側 */
-    background-color: #FAB005;     /* 按鈕背景色 */
-    color: white;                  /* 按鈕文字顏色 */
-    padding: 15px;            /* 按鈕內邊距 */
-    border-radius: 50%;            /* 圓角 */
-    text-decoration: none;         /* 去除文字底線 */
-    font-size: 18px;               /* 文字大小 */
-    display: none;                 /* 預設隱藏按鈕 */
-    transition: opacity 0.3s;      /* 淡入淡出過渡效果 */
+    position: fixed;
+    /* 固定在螢幕位置 */
+    bottom: 50px;
+    /* 距離頁面底部 */
+    right: 20px;
+    /* 距離頁面右側 */
+    background-color: #FAB005;
+    /* 按鈕背景色 */
+    color: white;
+    /* 按鈕文字顏色 */
+    padding: 15px;
+    /* 按鈕內邊距 */
+    border-radius: 50%;
+    /* 圓角 */
+    text-decoration: none;
+    /* 去除文字底線 */
+    font-size: 18px;
+    /* 文字大小 */
+    display: none;
+    /* 預設隱藏按鈕 */
+    transition: opacity 0.3s;
+    /* 淡入淡出過渡效果 */
     font-family: 'Potta One', sans-serif;
     font-weight: 100;
+    z-index: 99;
 }
 
 /* 當按鈕顯示時 */
 .back-to-top.show {
-    display: inline-block;         /* 顯示按鈕 */
-    opacity: 0.8;                  /* 調整透明度 */
+    display: inline-block;
+    /* 顯示按鈕 */
+    opacity: 0.8;
+    /* 調整透明度 */
 }
 
 .back-to-top:hover {
-    opacity: 1;                    /* 滑鼠懸停時全顯 */
+    opacity: 1;
+    /* 滑鼠懸停時全顯 */
 }
 
 
