--- a/CSS/campaign.css
+++ b/CSS/campaign.css
@@ -6,7 +6,6 @@
 
 body {
     background-color: #D2DEDC;
-    min-width: 1200px;
 }
 
 a {
@@ -32,69 +31,6 @@ h3 {
 p {
     font-size: 24px;
     font-weight: bold;
-}
-
-
-.head {
-    width: 100%;
-    height: 80px;
-    background-color: #636E7F;
-}
-
-.head-top {
-    width: 1200px;
-    height: 80px;
-    padding: 0 10px;
-    box-sizing: border-box;
-    margin: auto;
-}
-
-.head-logo {
-    width: 146px;
-    height: 80px;
-    float: left;
-}
-
-.head-list {
-    min-width: 842px;
-    float: right;
-}
-
-.head-list nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80px;
-}
-
-.head-list nav ul {
-    display: flex;
-    /* ul 內的 li 項目水平排列 */
-}
-
-.head-list nav li {
-    margin: 15px;
-    /* 設定項目之間的間距 */
-    color: #F6EED1;
-    /* text-decoration: none; ，a標籤才需要*/
-    /* 移除底線 */
-    font-size: 18px;
-    font-family: 'Fredoka One', sans-serif;
-    font-weight: 800;
-    /* text-shadow: 0px 0px 10px #000000; */
-}
-
-.head-list nav li:hover {
-    color: #ffffff;
-    text-shadow: 0px 0px 20px #ffffff;
-    /* box-shadow: 0px 10px 10px -10px #ffffff; */
-    /* 滑鼠懸停效果 */
-    cursor: pointer;
-    /* 滑鼠指到會變成手指 */
-}
-
-.clear {
-    clear: both;
 }
 
 /* .thank {
@@ -712,14 +648,16 @@ p {
 
 /* -------------------------活動2開頭背景圖--------------------- */
 .part2-main-bg-outer {
-    width: 1440px;
+    width: 100%;
+    max-width: 1440px;
     height: 745px;
     margin: auto;
     position: relative;
 }
 
 .part2-main-bg {
-    width: 1440px;
+    width: 100%;
+    max-width: 1440px;
     height: 1055px;
     margin: auto;
     position: absolute;
