--- a/CSS/index.css
+++ b/CSS/index.css
@@ -19,8 +19,10 @@ h2 {
     color: #09374F;
     font-weight: bolder;
     font-family: 'Nunito', sans-serif;
-    position: absolute;
-    top: 13px;
+    box-sizing: border-box;
+    padding: 13px 0;
+    position: relative;
+
 }
 
 h3 {
@@ -55,7 +57,6 @@ hr {
 
 .top-bg img {
     width: 100%;
-    min-width: 1200px;
     height: 710px;
     /* filter: blur(1px); */
     /* 設置模糊濾鏡 */
@@ -71,62 +72,56 @@ hr {
     /* 圖片居中顯示 */
     /* background-image: url(../assets/top-bg.png); */
     /* 背景圖不佔空間 */
-
-}
-
-.top-text img {
-    width: 200px;
-    height: 55px;
-    position: absolute;
-    top: 140px;
-    left: 120px;
-    transform: rotate(-25deg);
-    /* 旋转45度 */
 }
 
 .top-text {
-    width: 1200px;
+    width: 100%;
+    max-width: 1200px;
     height: 620px;
     margin: auto;
+    box-sizing: border-box;
+    padding-top: 180px;
     position: relative;
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+    text-align: center;
 }
 
+
 h1 {
-    width: 1008px;
-    position: absolute;
-    top: 180px;
-    /* top: 50%; */
-    /* 垂直居中 */
-    left: 50%;
-    /* 水平居中 */
-    transform: translate(-50%);
-    /* 修正偏移量，讓標題真正位於中心 */
-    /* color: #F5DFAC; */
+    width: 100%;
+    max-width: 1008px;
     color: #D2DEDC;
     text-shadow: 2px 5px 20px #000000;
     /* 標題文字顏色 */
     font-size: 72px;
     /* font-style: italic; */
     /* 斜體 */
-    /* text-align: center; */
     font-family: "Rammetto One", sans-serif;
     font-weight: 400;
     letter-spacing: 5px;
 }
 
+@media screen and (max-width: 768px) {
+    h1 {
+        font-size: 50px;
+    }
+}
+
 .h1-bg {
+    width: 100%;
+    max-width: 1008px;
+    position: absolute;
     color: #1cc7ab;
     top: 185px;
-    /* top: 50%; */
-    /* 垂直居中 */
-    left: 50.5%;
-    /* 水平居中 */
-    transform: translate(-50%);
+    transform: translateX(5px);
     z-index: -1;
 }
 
 .top-text p {
-    width: 300px;
+    width: 100%;
+    max-width: 300px;
     height: 100px;
     font-size: 16px;
     color: #ffffffE0;
@@ -150,13 +145,21 @@ h1 {
     z-index: -999;
 }
 
+@media screen and (max-width: 1200px) {
+    .moddle-bg {
+        top: 2248px;
+        height: 4950px;
+        border-radius: 0;
+        border: none;
+    }
+}
 
 .back-to-top {
     position: fixed;
     /* 固定在螢幕位置 */
-    bottom: 50px;
+    bottom: 150px;
     /* 距離頁面底部 */
-    right: 20px;
+    right: 10px;
     /* 距離頁面右側 */
     background-color: #FAB005;
     /* 按鈕背景色 */
@@ -192,19 +195,10 @@ h1 {
     /* 滑鼠懸停時全顯 */
 }
 
-
-
-
-
-
-
-
-
-
-
 .news {
-    width: 800px;
-    height: 212px;
+    width: 100%;
+    max-width: 800px;
+    /* height: 212px; */
     margin: auto;
     /* margin-top: 20px; */
     padding: 15px;
@@ -244,7 +238,7 @@ h1 {
 
 .naws-main {
     width: 100%;
-    height: 120px;
+    /* height: 120px; */
     padding: 10px 0;
     box-sizing: border-box;
 }
@@ -287,11 +281,28 @@ h1 {
     cursor: pointer;
 }
 
-.about-top {
-    width: 1200px;
-    height: 80px;
+.about {
+    width: 100%;
+    max-width: 1200px;
+    min-height: 500px;
     margin: auto;
     margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+
+@media screen and (max-width: 1200px) {
+    .about {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+.about-top {
+    width: 100%;
+    max-width: 550px;
+    min-height: 80px;
+    margin: auto;
     position: relative;
 }
 
@@ -329,22 +340,17 @@ h1 {
     bottom: 0;
 }
 
-.about {
-    width: 1200px;
-    height: 500px;
-    margin: auto;
-}
-
 .main-left {
-    width: 550px;
-    height: 500px;
-    float: left;
+    width: 100%;
+    max-width: 550px;
+    min-height: 580px;
     position: relative;
 }
 
 .main-about {
-    width: 495px;
-    height: 274px;
+    width: 100%;
+    max-width: 495px;
+    min-height: 274px;
     margin: 20px;
     line-height: 1.7;
     /* 設置行距，1.6 倍於字體大小 */
@@ -355,8 +361,8 @@ h1 {
 .hr-r {
     width: 180px;
     position: absolute;
-    top: 460px;
-    left: 345px;
+    bottom: 30px;
+    right: 25px;
     border: 1px solid #615F58;
 }
 
@@ -373,8 +379,8 @@ h1 {
     width: 35.5px;
     height: 60px;
     position: absolute;
-    left: 380px;
-    top: 465px;
+    right: 135px;
+    bottom: -25px;
     transform: rotate(-50deg);
 }
 
@@ -386,7 +392,7 @@ h1 {
 .photo-right {
     width: 650px;
     height: 500px;
-    float: right;
+    margin-top: 80px;
     background-color: #ffffff;
     border: 2px solid #615F58;
     border-radius: 20px;
@@ -410,11 +416,43 @@ h1 {
     left: 325px;
 }
 
-.ft-top {
-    width: 1200px;
-    height: 80px;
+/* ----------------------------food-------------------- */
+.ft {
+    width: 100%;
+    max-width: 1200px;
+    min-height: 500px;
     margin: auto;
     margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
+}
+
+@media screen and (max-width: 1200px) {
+    .ft {
+        flex-direction: column;
+        align-items: center;
+    }
+    .main-right {
+        order: 1;
+    }
+    .photo-left {
+        order: 2;
+    }
+}
+
+.main-right {
+    width: 100%;
+    max-width: 550px;
+    min-height: 580px;
+    position: relative;
+}
+
+.ft-top {
+    width: 100%;
+    max-width: 550px;
+    min-height: 80px;
+    box-sizing: border-box;
+    margin: auto;
     position: relative;
 }
 
@@ -445,22 +483,11 @@ h1 {
     right: 180px;
 }
 
-.ft {
-    width: 1200px;
-    height: 500px;
-    margin: auto;
-}
-
-.main-right {
-    width: 550px;
-    height: 500px;
-    float: right;
-    position: relative;
-}
 
 .main-ft {
-    width: 495px;
-    height: 102px;
+    width: 100%;
+    max-width: 495px;
+    min-height: 102px;
     margin: 20px;
     line-height: 1.7;
     /* 設置行距，1.6 倍於字體大小 */
@@ -483,9 +510,9 @@ h1 {
 .icon-ft {
     width: 430px;
     height: 135px;
-    position: absolute;
-    top: 180px;
-    left: 75px;
+    margin: auto;
+    position: relative;
+    top: 20px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -502,8 +529,8 @@ h1 {
 .hr-l {
     width: 180px;
     position: absolute;
-    top: 460px;
-    right: 345px;
+    bottom: 30px;
+    left: 25px;
     border: 1px solid #615F58;
 }
 
@@ -525,15 +552,15 @@ h1 {
     width: 35.5px;
     height: 60px;
     position: absolute;
-    right: 380px;
-    top: 465px;
+    left: 135px;
+    bottom: -25px;
     transform: rotate(50deg);
 }
 
 .photo-left {
     width: 650px;
     height: 500px;
-    float: left;
+    margin-top: 80px;
     background-color: #ffffff;
     border: 2px solid #615F58;
     border-radius: 20px;
@@ -542,11 +569,32 @@ h1 {
     position: relative;
 }
 
-.pet-top {
-    width: 1200px;
-    height: 80px;
+/* ---------------------------專屬服務------------------- */
+
+.pet {
+    width: 100%;
+    max-width: 1200px;
+    min-height: 500px;
     margin: auto;
     margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
+}
+
+@media screen and (max-width: 1200px) {
+    .pet {
+        flex-direction: column;
+        align-items: center;
+    }
+
+}
+
+.pet-top {
+    width: 100%;
+    max-width: 550px;
+    min-height: 80px;
+    box-sizing: border-box;
+    margin: auto;
     position: relative;
 }
 
@@ -569,15 +617,10 @@ h1 {
     z-index: -1;
 }
 
-.pet {
-    width: 1200px;
-    height: 500px;
-    margin: auto;
-}
-
 .main-pet {
-    width: 495px;
-    height: 140px;
+    width: 100%;
+    max-width: 495px;
+    min-height: 140px;
     margin: 20px;
     line-height: 1.7;
     /* 設置行距，1.6 倍於字體大小 */
@@ -588,9 +631,9 @@ h1 {
 .icon-pet {
     width: 455px;
     height: 135px;
-    position: absolute;
-    top: 210px;
-    left: 40px;
+    margin: auto;
+    position: relative;
+    top: 10px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -604,11 +647,30 @@ h1 {
     width: 230px;
 }
 
-.rx-top {
-    width: 1200px;
-    height: 80px;
+.rx {
+    width: 100%;
+    max-width: 1200px;
+    min-height: 500px;
     margin: auto;
     margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
+}
+
+@media screen and (max-width: 1200px) {
+    .rx {
+        flex-direction: column;
+        align-items: center;
+    }
+
+}
+
+.rx-top {
+    width: 100%;
+    max-width: 550px;
+    min-height: 80px;
+    box-sizing: border-box;
+    margin: auto;
     position: relative;
 }
 
@@ -654,15 +716,10 @@ h1 {
     z-index: -1;
 }
 
-.rx {
-    width: 1200px;
-    height: 500px;
-    margin: auto;
-}
-
 .main-rx {
-    width: 495px;
-    height: 140px;
+    width: 100%;
+    max-width: 495px;
+    min-height: 140px;
     margin: 20px;
     line-height: 1.7;
     /* 設置行距，1.6 倍於字體大小 */
@@ -674,9 +731,9 @@ h1 {
 .icon-rx {
     width: 390px;
     height: 135px;
-    position: absolute;
-    top: 200px;
-    left: 75px;
+    margin: auto;
+    position: relative;
+    top: 20px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
