--- a/CSS/relax.css
+++ b/CSS/relax.css
@@ -1,11 +1,11 @@
 * {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
 body {
   background-color: #D2DEDC;
-  min-width: 1200px;
 }
 
 a {
@@ -35,79 +35,10 @@ p {
   font-weight: bold;
 }
 
-
-.head {
-  width: 100%;
-  height: 80px;
-  background-color: #636E7F;
-}
-
-.head-top {
-  width: 1200px;
-  height: 80px;
-  margin: auto;
-}
-
-.head-logo {
-  width: 154.5px;
-  height: 80px;
-  float: left;
-}
-
-.logo {
-  width: 202px;
-  height: 80px;
-}
-
-.head-list {
-  min-width: 842px;
-  float: right;
-}
-
-.head-list nav {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 80px;
-}
-
-.head-list nav ul {
-  display: flex;
-  /* ul 內的 li 項目水平排列 */
-  list-style-type: none;
-  /* 移除預設的列表點 */
-}
-
-.head-list nav li {
-  margin: 15px;
-  /* 設定項目之間的間距 */
-  color: #F6EED1;
-  /* 文字顏色 */
-  font-size: 18px;
-  font-family: 'Fredoka One', sans-serif;
-  font-weight: 800;
-  /* text-shadow: 0px 0px 10px #000000; */
-}
-
-.head-list nav li:hover {
-  color: #ffffff;
-  text-shadow: 0px 0px 20px #ffffff;
-  /* box-shadow: 0px 10px 10px -
-    /* 滑鼠懸停效果 */
-  cursor: pointer;
-  /* 滑鼠指到會變成手指 */
-}
-
-.clear {
-  clear: both;
-}
-
 .relax-top {
   width: 1200px;
   height: 224px;
   margin: auto;
-
-
 }
 
 .square {
